--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "sass": "^1.43.4",
+    "sass-loader": "^10.1.1"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.2.1",
-    "sass": "^1.43.4",
-    "sass-loader": "10.1.1"
+    "stylelint": "^14.0.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^23.0.0",
+    "stylelint-scss": "^4.0.0"
   }
 }
