--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.15.0",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "sass": "^1.43.4",
