--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "sass": "^1.43.4",
-    "sass-loader": "^10.1.1"
+    "sass-loader": "^10.1.1",
+    "vue-material-design-icons": "^4.13.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^7.0.0",
