--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
+    "lint:js": "eslint \"**/*.{js,vue}\" --ignore-path .gitignore",
+    "lint:style": "stylelint \"**/*.{scss,vue}\" --ignore-path .gitignore",
+    "lint": "yarn lint:js && yarn lint:style",
     "generate": "nuxt generate"
   },
   "dependencies": {
@@ -18,22 +21,22 @@
     "vue-material-design-icons": "^4.13.0"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^7.0.0",
+    "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-fonts": "^1.3.0",
-    "@nuxtjs/style-resources": "^1.2.1",
+    "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.1.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-nuxt": "^3.0.0",
+    "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "prettier": "^2.4.1",
-    "stylelint": "^14.0.1",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^23.0.0",
+    "eslint-plugin-vue": "^7.12.1",
+    "prettier": "^2.5.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^22.0.0",
     "stylelint-config-standard-scss": "^2.0.0",
     "stylelint-scss": "^4.0.0"
   }
