--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@nuxtjs/style-resources": "^1.2.1",
     "@babel/eslint-parser": "^7.16.3",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/style-resources": "^1.2.1",
+    "@nuxtjs/svg": "^0.4.0",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
