--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "@svgr/webpack": "^6.3.1",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.54.0",
-    "sass-loader": "^13.0.2"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.6.1",
