--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@svgr/webpack": "^6.3.1",
     "axios": "^0.27.2",
     "next": "12.2.3",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "18.6.1",
