--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,3 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/components/*": ["src/components/*"],
-      // "@/icons/*": ["src/components/Icons/*"],
-      // "@/logos/*": ["src/components/Icons/Logos/*"],
-      "@/layouts/*": ["src/layouts/*"],
-      "@/services/*": ["src/services/*"],
-      "@/*": ["src/*"]
-    }
-  }
+  "compilerOptions": {}
 }
