--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0"
   },
